--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@primer/react": "^35.31.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-firebase/firestore": "^18.6.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
