--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
+    "react-native-dropdown-select-list-expo": "^3.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.11.1",
