--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.14.0",
+    "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^10.0.1",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/markdown-it": "^13.0.7",
     "@types/react": "~18.2.14",
     "@types/react-native-vector-icons": "^6.4.15",
     "typescript": "^5.1.3"
