--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@primer/react": "^35.31.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/firestore": "^18.6.0",
+    "@react-native-firebase/storage": "^18.7.1",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
@@ -38,6 +39,7 @@
     "react-native-dropdown-select-list-expo": "^3.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.0.3",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
