--- a/app.json
+++ b/app.json
@@ -30,7 +30,13 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      [
+      "expo-image-picker",
+      {
+        "photosPermission": "Allow $(PRODUCT_NAME) to access your photos",
+        "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera"
+      }
+    ]
     ]
   }
 }
