--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~49.0.13",
     "expo-checkbox": "~2.4.0",
     "expo-constants": "~14.4.2",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
@@ -34,18 +35,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
+    "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-dropdown-select-list-expo": "^3.0.0",
     "react-native-elements": "^3.4.3",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.14.0",
-
     "react-native-toast-message": "^2.1.8",
-
     "react-native-vector-icons": "^10.0.1",
     "styled-components": "^5.3.11"
   },
