subindo alteracoes "fotos" incompleto

--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.5",
+    "react-native-action-button": "^2.8.5",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-dropdown-select-list-expo": "^3.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-picker": "^7.1.0",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "~3.3.0",
