--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "react-native-svg": "^13.14.0",
     "react-native-toast-message": "^2.1.8",
     "react-native-vector-icons": "^10.0.1",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "react-native-web": "~0.19.6",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
